--- a/src/styles.css
+++ b/src/styles.css
@@ -242,3 +242,26 @@ input:invalid {
   outline: 2px dashed red;
   color: initial;
 }
+
+.keyboard {
+  --key-width: 52px;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  left: 0;
+  right: 0;
+  justify-content: center;
+  align-items: center;
+}
+.keyboard > div {
+  display: flex;
+  flex-direction: row;
+}
+.keyboard > div > .cell {
+  width: var(--key-width);
+  height: var(--key-width);
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
